# opentrustregion

./: CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
cmake/: OpenTrustRegionConfig.cmake.in
pyopentrustregion/: python_interface.py  testsuite.py
src/: c_interface.f90  opentrustregion.f90  opentrustregion_blas_shim.f90
tests/: c_interface_unit_tests.f90  c_system_test.c  c_system_tests.c  opentrustregion_system_tests.f90  opentrustregion_unit_tests.f90  quad_system_test.f90  test_reference.f90
